--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -1,7 +1,7 @@
 development:
   clients:
     default:
-      uri: mongodb+srv://admin:admin@cluster0.bjurb.mongodb.net/test
+      uri: mongodb+srv://admin:admin@cluster0.bjurb.mongodb.net/blog_development?retryWrites=true&w=majority
       # database: blog_development
       # hosts:
       #   - localhost:27017
